# qstore

./: .gitignore  CMakeLists.txt  README.md  download_models.ipynb  drop_cache.sh  qstore.sh  read_bandwidth_variation.sh  vcpkg.json
baselines/: README.md  baseline0_no_compression.sh  baseline1_lz4.sh  baseline2_zstd.sh  baseline3_safetensors.py  baseline3_safetensors.sh  baseline4_zipnn.sh  run_all_baselines.sh
baselines/src/: baseline0_no_compression.cpp  baseline1_lz4.cpp  baseline2_zstd.cpp  baseline4_zipnn.cpp
baselines/zipnn_c_api/: CMakeLists.txt  data_manipulation_dtype16.c  data_manipulation_dtype16.h  zipnn.c  zipnn.h  zipnn_test.c
include/: compression.h  load_tensors.h  qstore.h  safetensors.h
model_chain/: README.md  conditional_analysis_16_4.py  conditional_analysis_16_8.py  conditional_analysis_8_4.py  huffman_4_bit.py  huffman_8_bit.py  quantize_and_save.py  zipnn_analysis.py  zstd_analysis.py
src/: decode_helper.cpp  encode_helper.cpp  final_decode.cpp  final_decode_quantized_only.cpp  final_encode.cpp  load_tensors.cpp  safetensors_utils.cpp  utils.cpp
